# code-runner

./: .cspell.json  .gitignore  Cargo.toml  Maze Roller Level 2.ods  README.md  build.rs  debug_userspace.lldb  flake.nix  notes.md  os.dot  rust-toolchain.toml  syscalls.md
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs  mem.rs  syscall.rs  syscall_output.rs  syscall_pointer.rs  syscall_print.rs  syscall_slice.rs  syscall_start_recording_keyboard.rs  syscall_take_frame_buffer.rs
kernel/: Cargo.toml
kernel/src/: acpi.rs  allocator.rs  apic.rs  colorful_logger.rs  combined_logger.rs  context.rs  context_switching_keyboard_interrupt_handler.rs  context_switching_logging_timer_interrupt_handler.rs  continuous_bool_vec.rs  cool_keyboard_interrupt_handler.rs  demo_async.rs  demo_async_keyboard_drop.rs  demo_async_rtc_drop.rs  demo_maze_roller_game.rs  draw_rust.rs  embedded_graphics_writer.rs  enter_user_mode.rs  find_used_virt_addrs.rs  frame_buffer.rs  framebuffer.rs  get_rgb_color.rs  gtd.rs  handle_syscall.rs  hpet.rs  hpet_memory.rs  init_syscalls.rs  insert.rs  interrupts.rs  jmp_to_elf.rs  keyboard_interrupt_mutex.rs  logger.rs  logger_without_interrupts.rs  main.rs  memory.rs  phys_mapper.rs  pic8259_interrupts.rs  remove.rs  restore_context.rs  serial_logger.rs  set_color.rs  (+12 more)
kernel/src/interrupts/: breakpoint.rs  disable_pic8259.rs  double_fault.rs  general_protection_fault.rs  keyboard.rs  mod.rs  page_fault.rs  rtc.rs  timer.rs
kernel/src/interrupts/pic/: keyboard.rs  mod.rs  mouse.rs  timer.rs
kernel/src/modules/: async_keyboard.rs  async_rtc.rs  double_fault_handler.rs  double_fault_handler_entry.rs  gdt.rs  get_apic.rs  get_io_apic.rs  get_local_apic.rs  gtd.rs  idt.rs  local_apic_getter.rs  logging_breakpoint_handler.rs  logging_timer_interrupt_handler.rs  mod.rs  panicking_double_fault_handler.rs  panicking_general_protection_fault_handler.rs  panicking_invalid_opcode_handler.rs  panicking_invalid_tss_fault_handler.rs  panicking_local_apic_error_interrupt_handler.rs  panicking_page_fault_handler.rs  panicking_security_exception_fault_handler.rs  panicking_segment_not_present_handler.rs  panicking_spurious_interrupt_handler.rs  panicking_stack_segment_fault_handler.rs  rtc_async_handler.rs  spurious_interrupt_handler.rs  static_local_apic.rs  tss.rs  unsafe_local_apic.rs
kernel/src/modules/idt/: disable_pic8259.rs  mod.rs
kernel/src/modules/syscall/: handle_syscall.rs  init_syscalls.rs  jmp_to_elf.rs  mod.rs  syscall_handler.rs
kernel/src/task/: execute_future.rs  executor.rs  keyboard.rs  mod.rs  rtc.rs
riscv/: Cargo.toml  Makefile  debug.lldb  make_hdd.sh  os.elf
riscv/src/: lib.rs
riscv/src/asm/: boot.S
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
user_space/: Cargo.toml
user_space/src/: allocator.rs  async_keyboard.rs  demo_maze_roller_game.rs  draw_rust.rs  embedded_graphics_frame_buffer.rs  execute_future.rs  main.rs  panic_handler.rs  syscall.rs  test_disable_interrupts.rs
userspace/: Cargo.toml
userspace/src/: main.rs
util/: Cargo.toml
util/src/: Continuous Bool Vec.md  change_stream.rs  continuous_bool_vec.rs  lib.rs  splice.rs
util/src/continuous_bool_vec/: get_continuous_range.rs  is_range_available.rs  mod.rs  new.rs  set.rs
