[package]
name = "code-runner"
version = "0.1.0"
edition = "2021"
default-run = "qemu-uefi"

[workspace]
members = ["kernel", "util"]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.8"

[patch.crates-io]
# x2apic = { path = "../x2apic-rs" }
# bootloader-x86_64-common = { path = "../bootloader/common" }
x86_rtc = { git = "https://github.com/ChocolateLoverRaj/x86_rtc", branch = "interrupts" }

# [patch.crates-io.x86_64]
# path = "../x86_64"
# git = "https://github.com/rust-osdev/x86_64"
# branch = "fix/step-nightly-breakage"
