[package]
name = "code-runner"
version = "0.1.0"
edition = "2021"
default-run = "qemu-uefi"

[workspace]
members = ["kernel", "util", "user_space", "common"]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
user_space = { path = "user_space", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.9"

[patch.crates-io]
# x2apic = { git = "https://github.com/ChocolateLoverRaj/x2apic-rs", rev = "e275e7aaa9341b185ddd9f10bbce77c53862a618" }
bootloader-x86_64-common = { git = "https://github.com/rust-osdev/bootloader", rev = "2419f2f6bcc81839043b1a0b21c65302b34037d1" }
x86_rtc = { git = "https://github.com/ChocolateLoverRaj/x86_rtc", rev = "ee80ee63fc2eacb55727493be435eee472e3279f" }

# [patch.crates-io.x86_64]
# # path = "../x86_64"
# git = "https://github.com/rust-osdev/x86_64"
# # branch = "fix/step-nightly-breakage"
# tag = "v0.14.13"
