[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
log = { version = "0.4.22", default-features = false }
conquer-once = { version = "0.4.0", default-features = false }
tinytga = "0.5.0"
x86_64 = "0.15.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
pic8259 = "0.11.0"
spin = "0.9.8"
acpi = "5.1.0"
pc-keyboard = "0.8.0"
heapless = "0.8.0"
linked_list_allocator = "0.10.5"
x2apic = "0.4.3"
num_enum = { version = "0.7.3", default-features = false }
ps2-mouse = "0.1.4"
anyhow = { version = "1.0.93", default-features = false }
unicode-segmentation = "1.12.0"
bootloader_api = "0.11.8"
bootloader-x86_64-common = "0.11.8"

[[bin]]
name = "kernel"
test = false
bench = false
