[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
tinytga = "0.5.0"
x86_64 = "0.15.2"
pic8259 = "0.11.0"
spin = "0.9.8"
acpi = "5.1.0"
pc-keyboard = "0.8.0"
heapless = "0.8.0"
linked_list_allocator = "0.10.5"
x2apic = "0.4.3"
unicode-segmentation = "1.12.0"
bootloader_api = "0.11.9"
bootloader-x86_64-common = "0.11.9"
x86_rtc = "0.1.1"
elf = { version = "0.7.4", default-features = false, features = ["nightly"] }
util = { version = "0.1.0", path = "../util" }
common = { version = "0.1.0", path = "../common" }
raw-cpuid = "11.3.0"

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["alloc", "async-await", "async-await-macro"]

[dependencies.chrono]
version = "0.4.39"
default-features = false
features = ["alloc"]

[dependencies.anyhow]
version = "1.0.95"
default-features = false

[dependencies.log]
version = "0.4.25"
default-features = false

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[dependencies.num_enum]
version = "0.7.3"
default-features = false

[[bin]]
name = "kernel"
test = false
bench = false
